--- a/index.html
+++ b/index.html
@@ -10,13 +10,25 @@
     <main>
         <section id="telefone">
             
-            <iframe src="home.html" frameborder="0" name="tela"></iframe>
+            <iframe src="home.html" frameborder="0" name="tela">
+                Seu navegador não é compativel
+            </iframe>
 
             
         </section>
 
         <section id="redes-sociais">
-
+            <a href="imagens/tela-home.jpg" target="tela"><img src="imagens/logo-home.jpg" alt="instagram"></a>
+            <br>
+            <a href="imagens/tela-instagram.jpg" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
+            <br>
+            <a href="imagens/tela-facebook.jpg" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+            <br>
+            <a href="imagens/logo-youtube.jpg" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+            <br>
+            <a href="imagens/logo-twitter.jpg" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a>
+            <br>
+            <a href="imagens/tela-github.jpg" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a>
         </section>
     </main>
 </body>
